Upgrade Java version to 17, Kotlin to 1.7.0